--- a/news.html
+++ b/news.html
@@ -88,6 +88,6 @@
         </div>
     </div>
 
-    <script src="scripts/settings.js"></script>
+    <!-- <script src="scripts/settings.js"></script> -->
 </body>
 </html>
