--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                 <i class="fas fa-clock"></i>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="news.html">Patch Notes</a></li>
-                <!-- <li><a href="settings.html">Settings</a></li> -->
+                <li><a href="overwatch.html">OW2 Career Profile</a></li>
             </ul>
         </div>
     <!-- End -->
 
     <!-- Alert -->
-    <!-- <div class="toast show">
+    <div class="toast show">
         <div class="toast-content">
             <div class="message">
-                <span class="text text-1">New Update</span>
-                <span class="text text-2">Website Updated</span>
+                <span class="text text-1">Overwatch</span>
+                <span class="text text-2">F0m's career profile are avalibled.</span>
             </div>
         </div>
         <div class="progress"></div>
@@ -75,7 +75,6 @@
             }, 5000)
         </script>
     </div> -->
-    <!-- End -->
 
     <!-- Home -->
     <section class="home">
