--- a/overwatch.html
+++ b/overwatch.html
@@ -33,7 +33,7 @@
                               </g>
                            </svg>
                         </div>
-                        <div class="text-brand font-semibold uppercase">Mummy</div>
+                        <div class="text-brand font-semibold uppercase">No Title</div>
                      </div>
                      <div class="py-4 flex flex-col-reverse justify-end items-start gap-4 md:py-0 md:flex-col md:items-end">
                         <div class="flex flex-row justify-end gap-x-4">
