--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             <ul>
                 <i class="fas fa-clock"></i>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="news.html">Patch Notes</a></li>
-                <li><a href="overwatch.html">OW2 Career Profile</a></li>
+                <li><a href="overwatch.html">Overwatch Career</a></li>
+                <!-- <li><a href="settings.html">Settings</a></li> -->
             </ul>
         </div>
     <!-- End -->
 
     <!-- Alert -->
-    <div class="toast show">
+    <!-- <div class="toast show">
         <div class="toast-content">
             <div class="message">
-                <span class="text text-1">Overwatch</span>
-                <span class="text text-2">F0m's career profile are avalibled.</span>
+                <span class="text text-1">New Update</span>
+                <span class="text text-2">Website Updated</span>
             </div>
         </div>
         <div class="progress"></div>
@@ -75,6 +75,7 @@
             }, 5000)
         </script>
     </div> -->
+    <!-- End -->
 
     <!-- Home -->
     <section class="home">
@@ -120,7 +121,7 @@
           </div>
       
           <div class="card insta">
-            <img src="images/insta_pfp.jpg" alt="Profile Picture">
+            <img src="images/insta_pfp.png" alt="Profile Picture">
             <h2>マ</h2>
             <h4>@voixj</h4>
             <p>Uploading music stories and love to chat with everyone!</p>
