--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>- X D -</title>
     <meta name="description" content="- X D - Offical Website">
     <meta name="keywords" content="F0m, - X D -">
-    <link rel="icon" href="images/yt_pfp.jpg">
+    <link rel="icon" href="images/insta_pfp.jpg">
 </head>
 
 <body>
@@ -83,14 +83,16 @@
             <div class="container-texts">
                 <h4>Welcome To</h4>
                 <h1>- X<span> D -</span></h1>
-                <h3>Here is all - X D - Things...</h3>
+                <h3>Here is all - X D - things...</h3>
 
                 <!-- <a href="https://f0m14.github.io/fn-leaks" class="btn" target="_blank">Fortnite Leaks (Andriod Only)</a> -->
                 <div class="social">
-                    
-                    <!-- <a href="https://youtube.com/@voixj" target="_blank"><img src="images/icons/youtube.png"></a> -->
-                    <!-- <a href="https://www.instagram.com/voixj/" target="_blank"><img src="images/icons/instagram.png"></a> -->
-                    <!-- <a href="https://www.twitch.tv/f0m_14" target="_blank"><img src="images/icons/twitch.png"></a> -->
+                    <a href="https://youtube.com/@voixj" target="_blank"><img src="images/icons/youtube.png"></a>
+                    <a href="https://www.instagram.com/voixj/" target="_blank"><img src="images/icons/instagram.png"></a>
+                    <a href="https://x.com/voixj1" target="_blank"><img src="images/icons/twitter.png"></a>
+                    <a href="https://www.twitch.tv/f0m_14" target="_blank"><img src="images/icons/twitch.png"></a>
+                    <a href="https://discord.com/users/1282747277206884436" target="_blank"><img src="images/icons/discord.png"></a>
+                    <a href="https://tellonym.me/voixj" target="_blank"><img src="images/icons/link.png"></a>
                 </div>
             </div>
         </div>
@@ -98,7 +100,7 @@
 
     <section class="about">
         <div class="container-images">
-            <img src="images/yt_pfp.jpg" class="floating" alt="- X D - Avatar">
+            <img src="images/insta_pfp.jpg" class="floating" alt="- X D - Avatar">
         </div>
         <div class="container-texts">
             <h1>About <span>Me</span></h1>
@@ -121,7 +123,7 @@
           </div>
       
           <div class="card insta">
-            <img src="images/insta_pfp.png" alt="Profile Picture">
+            <img src="images/insta_pfp.jpg" alt="Profile Picture">
             <h2>マ</h2>
             <h4>@voixj</h4>
             <p>Uploading music stories and love to chat with everyone!</p>
@@ -140,7 +142,7 @@
             <h2>- X D - マ</h2>
             <h4>@voixj</h4>
             <p>Discord Account (Disabled)</p>
-            <a href="https://discord.com/users/788052392351760415" target="_blank">View Profile</a>
+            <a href="https://discord.com/users/1282747277206884436" target="_blank">View Profile</a>
           </div> -->
         </div>
       </section>
