--- a/news.html
+++ b/news.html
@@ -27,12 +27,13 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="news.html">Patch Notes</a></li>
-            <li>
+            <li><a href="overwatch.html">Overwatch Career profile</a></li>
+            <!-- <li>
                 <a href="#">More</a>
                 <ul class="dropdown">
                     <li><a href="settings.html">Settings</a></li>
                 </ul>
-            </li>
+            </li> -->
         </ul>
     </header>
     </div>
@@ -48,8 +49,8 @@
             <ul>
                 <i class="fas fa-clock"></i>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="news.html">Patch Notes</a></li>
-                <li><a href="settings.html">Settings</a></li>
+                <li><a href="overwatch.html">Overwatch Career profile</a></li>
+                <!-- <li><a href="settings.html">Settings</a></li> -->
             </ul>
         </div>
     <!-- End -->
