--- a/index.html
+++ b/index.html
@@ -137,13 +137,15 @@
             <a href="https://www.twitch.tv/f0m_14" target="_blank">Visit</a>
           </div> -->
       
-          <!-- <div class="card discord">
-            <img src="images/f0m.jpg" alt="Profile Picture">
+          <div class="card discord">
+            <img src="images/insta_pfp.jpg" alt="Profile Picture">
             <h2>- X D - マ</h2>
-            <h4>@voixj</h4>
-            <p>Discord Account (Disabled)</p>
+            <h4>@fvcilx</h4>
+            <p>Always here and chatting with my members in my server :)</p>
             <a href="https://discord.com/users/1282747277206884436" target="_blank">View Profile</a>
-          </div> -->
+            <a href="https://discord.gg/d8tg9Rg3PE" target="_blank">Join server</a>
+          </div>
+
         </div>
       </section>
 
