--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
           </div> -->
       
           <div class="card discord">
-            <img src="images/insta_pfp.jpg" alt="Profile Picture">
-            <h2>- X D - マ</h2>
+            <img src="images/discord_pfp.jfif" alt="Profile Picture">
+            <h2>エックス ディー</h2>
             <h4>@fvcilx</h4>
             <p>Always here and chatting with my members in my server :)</p>
             <a href="https://discord.com/users/1282747277206884436" target="_blank">View Profile</a>
-            <a href="https://discord.gg/d8tg9Rg3PE" target="_blank">Join server</a>
+            <a href="https://discord.gg/vWeVgHErwB" target="_blank">Join server</a>
           </div>
 
         </div>
